--- a/html/polygraphy.html
+++ b/html/polygraphy.html
@@ -45,8 +45,8 @@
           <ul class="features__row list">
             <li class="features__row--item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.6" height="31.6">
                       <use href="../images/sprite.svg#icon-codepen"></use>
                     </svg>
@@ -57,8 +57,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.4" height="26.7">
                       <use href="../images/sprite.svg#icon-printer"></use>
                     </svg>
@@ -69,8 +69,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="../html/polygraphy.html">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.4" height="31.4">
                       <use href="../images/sprite.svg#icon-copy"></use>
                     </svg>
@@ -81,8 +81,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.4" height="29.7">
                       <use href="../images/sprite.svg#icon-beer"></use>
                     </svg>
@@ -93,8 +93,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.4" height="28.7">
                       <use href="../images/sprite.svg#icon-chalkboard"></use>
                     </svg>
@@ -105,8 +105,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="../html/features.html">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.4" height="29.2">
                       <use href="../images/sprite.svg#icon-grav"></use>
                     </svg>
@@ -117,8 +117,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="33.3" height="30.1">
                       <use href="../images/sprite.svg#icon-t-shirt"></use>
                     </svg>
@@ -129,8 +129,8 @@
             </li>
             <li class="features__row--item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="31.4" height="31.4">
                       <use href="../images/sprite.svg#icon-bus"></use>
                     </svg>
