--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
           </h2>
           <ul class="list grid">
             <li class="grid__item">
-              <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="55" height="55">
+              <a class="link services__link" href="">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="55" height="55">
                       <use href="./images/sprite.svg#icon-codepen"></use>
                     </svg>
                   </div>
@@ -116,10 +116,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="55" height="47">
+              <a class="link services__link" href="">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="55" height="47">
                       <use href="./images/sprite.svg#icon-printer"></use>
                     </svg>
                   </div>
@@ -128,10 +128,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="./html/polygraphy.html">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="55" height="55">
+              <a class="link services__link" href="./html/polygraphy.html">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="55" height="55">
                       <use href="./images/sprite.svg#icon-copy"></use>
                     </svg>
                   </div>
@@ -140,10 +140,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="55" height="52">
+              <a class="link services__link" href="">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="55" height="52">
                       <use href="./images/sprite.svg#icon-beer"></use>
                     </svg>
                   </div>
@@ -152,10 +152,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="55" height="50">
+              <a class="link services__link" href="">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="55" height="50">
                       <use href="./images/sprite.svg#icon-chalkboard"></use>
                     </svg>
                   </div>
@@ -164,10 +164,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="58" height="53">
+              <a class="link services__link" href="">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="58" height="53">
                       <use href="./images/sprite.svg#icon-t-shirt"></use>
                     </svg>
                   </div>
@@ -176,10 +176,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="55" height="55">
+              <a class="link services__link" href="">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="55" height="55">
                       <use href="./images/sprite.svg#icon-bus"></use>
                     </svg>
                   </div>
@@ -188,10 +188,10 @@
               </a>
             </li>
             <li class="grid__item">
-              <a class="link" href="./html/features.html">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
-                    <svg class="icon" width="50" height="40">
+              <a class="link services__link" href="./html/features.html">
+                <div class="services__direction">
+                  <div class="services__thumb">
+                    <svg class="services__icon" width="50" height="40">
                       <use href="./images/sprite.svg#icon-arrow"></use>
                     </svg>
                   </div>
@@ -215,28 +215,23 @@
             <div class="grid__item">
               <ul class="list grid">
                 <li class="benefits__item grid__item">
-                  <span class="accent benefits-number">18+</span>
-                  <div class="container-p">
-                    <p>лет опыта на рекламном рынке</p>
-                  </div>
+                  <span class="accent benefits__number">18+</span>
+                  <span class="block">лет опыта на </span
+                  ><span> рекламном рынке</span>
                 </li>
                 <li class="benefits__item grid__item">
-                  <span class="accent benefits-number">250+</span>
-                  <div class="container-p">
-                    <p>реализованных проектов</p>
-                  </div>
+                  <span class="accent benefits__number">250+</span>
+                  <span class="block">реализованных</span><span>проектов</span>
                 </li>
                 <li class="benefits__item grid__item">
-                  <span class="accent benefits-number">37</span>
-                  <div class="container-p">
-                    <p>квалифицированных сотрудников</p>
-                  </div>
+                  <span class="accent benefits__number">37</span>
+                  <span class="block">квалифицированных</span
+                  ><span>сотрудников</span>
                 </li>
                 <li class="benefits__item grid__item">
-                  <span class="accent benefits-number">14+</span>
-                  <div class="container-p">
-                    <p>профессионального оборудования</p>
-                  </div>
+                  <span class="accent benefits__number">14+</span>
+                  <span class="block">профессионального</span
+                  ><span>оборудования</span>
                 </li>
               </ul>
             </div>
@@ -246,11 +241,11 @@
       <section class="works section">
         <div class="container">
           <p class="section__label">Наши работы</p>
-          <h2 class="section__title">
+          <h2 class="section__title section__title--works">
             Воплощаем <span class="accent">идеи</span>
           </h2>
-          <ul class="list">
-            <li class="item">
+          <ul class="list grid grid--work">
+            <li class="item grid__item grid__item--work">
               <a class="link" href="">
                 <div>
                   <img
@@ -264,7 +259,7 @@
               </a>
               <p class="upper works-label">Вывеска объемная</p>
             </li>
-            <li class="item">
+            <li class="item grid__item grid__item--work">
               <a class="link" href="">
                 <div>
                   <img
@@ -278,7 +273,7 @@
               </a>
               <p class="upper works-label">Наружная реклама</p>
             </li>
-            <li class="item">
+            <li class="item grid__item grid__item--work">
               <a class="link" href="">
                 <div>
                   <img
@@ -292,7 +287,7 @@
               </a>
               <p class="upper works-label">Вывеска объемная</p>
             </li>
-            <li class="item">
+            <li class="item grid__item grid__item--work">
               <a class="link" href="">
                 <div>
                   <img
@@ -306,7 +301,7 @@
               </a>
               <p class="upper works-label">Фирменный стиль</p>
             </li>
-            <li class="item">
+            <li class="item grid__item grid__item--work">
               <a class="link" href="">
                 <div>
                   <img
@@ -320,7 +315,7 @@
               </a>
               <p class="upper works-label">Фирменный стиль</p>
             </li>
-            <li class="item">
+            <li class="item grid__item grid__item--work">
               <a class="link" href="">
                 <div>
                   <img
