--- a/html/about.html
+++ b/html/about.html
@@ -118,8 +118,8 @@
           <ul class="list grid">
             <li class="grid__item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="55" height="55">
                       <use href="../images/sprite.svg#icon-codepen"></use>
                     </svg>
@@ -130,8 +130,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="55" height="47">
                       <use href="../images/sprite.svg#icon-printer"></use>
                     </svg>
@@ -142,8 +142,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="../html/polygraphy.html">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="55" height="55">
                       <use href="../images/sprite.svg#icon-copy"></use>
                     </svg>
@@ -154,8 +154,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="55" height="52">
                       <use href="../images/sprite.svg#icon-beer"></use>
                     </svg>
@@ -166,8 +166,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="55" height="50">
                       <use href="../images/sprite.svg#icon-chalkboard"></use>
                     </svg>
@@ -178,8 +178,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="58" height="53">
                       <use href="../images/sprite.svg#icon-t-shirt"></use>
                     </svg>
@@ -190,8 +190,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="55" height="55">
                       <use href="../images/sprite.svg#icon-bus"></use>
                     </svg>
@@ -202,8 +202,8 @@
             </li>
             <li class="grid__item">
               <a class="link" href="../html/features.html">
-                <div class="direction-item-box">
-                  <div class="direction-icon-box">
+                <div class="services__direction">
+                  <div class="services__thumb">
                     <svg class="icon" width="50" height="40">
                       <use href="../images/sprite.svg#icon-arrow"></use>
                     </svg>
