--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.2.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -220,8 +220,8 @@
           <div class="grid">
             <div class="grid__item">
               <p class="section__label">История</p>
-              <h2 class="section__title">
-                <span class="accent">18+</span> лет опыта на рекламном рынке
+              <h2 class="section__title section__title--history">
+                <span class="block"><span class="accent">18+</span> лет опыта</span> <span class="blosk">на рекламном </span>рынке
               </h2>
             </div>
             <ul class="list grid__item">
@@ -552,7 +552,7 @@
               <p class="upper works-label">Входная группа и вывеска</p>
             </li>
           </ul>
-          <button class="button" type="button">Все работы</button>
+          <button class="button" type="button button--label">Все работы</button>
         </div>
       </section>
       <section class="section proposal">
