--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             name="menu"
             id="menu__toggle"
           />
+
           <span class="menu__line"></span>
         </div>
       </label>
@@ -339,13 +340,13 @@
             <div class="grid__item">
               <p class="section__label">Наши партнеры</p>
               <h2 class="section__title">
-                <span class="accent">400+</span> компаний доверяют нам
+                <span class="block"><span class="accent">400+</span> компаний</span> доверяют нам
               </h2>
             </div>
             <div class="grid__item">
-              <ul class="list grid">
-                <li class="item">
-                  <div class="img-box">
+              <ul class="list partners__list grid">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img1.svg"
                       width="124"
@@ -354,8 +355,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img2.svg"
                       width="134"
@@ -364,8 +365,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img3.svg"
                       width="114"
@@ -374,8 +375,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img4.svg"
                       width="139"
@@ -384,8 +385,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img5.svg"
                       width="101"
@@ -394,8 +395,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img6.svg"
                       width="106"
@@ -404,8 +405,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img7.svg"
                       width="102"
@@ -414,8 +415,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img8.svg"
                       width="153"
@@ -424,8 +425,8 @@
                     />
                   </div>
                 </li>
-                <li class="item">
-                  <div class="img-box">
+                <li class="grid__item partners__item">
+                  <div class="partners__img-box">
                     <img
                       src="./images/ourpartners/img9.svg"
                       width="125"
@@ -529,9 +530,9 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-dark section--gray">
+      <div class="section--gray">
         <div class="container">
-          <div class="top-footer">
+          <div class="top-footer grid">
             <div class="grid__item">
               <a class="link footer-title" href=""
                 ><span class="accent" lang="en">Promomix –</span> рекламное
