--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
         <div class="container">
           <div class="top-footer grid">
             <div class="grid__item">
-              <a class="link footer-title" href=""
+              <a class="link footer__title" href=""
                 ><span class="accent" lang="en">Promomix –</span> рекламное
                 агентство полного цикла</a
               >
@@ -543,31 +543,31 @@
             <div class="grid__item">
               <div class="grid">
                 <nav class="grid__item">
-                  <ul class="list main-nav-footer">
+                  <ul class="list main-nav--footer">
                     <li class="item">
-                      <a class="link" href="./html/about.html">О компании</a>
+                      <a class="link main-nav__link " href="./html/about.html">О компании</a>
                     </li>
                     <li class="item">
-                      <a class="link" href="./html/features.html">Услуги</a>
+                      <a class="link main-nav__link " href="./html/features.html">Услуги</a>
                     </li>
                     <li class="item">
-                      <a class="link" href="./html/works.html">Наши работы</a>
+                      <a class="link main-nav__link " href="./html/works.html">Наши работы</a>
                     </li>
                     <li class="item">
-                      <a class="link" href="./html/services.html">Сервис</a>
+                      <a class="link main-nav__link " href="./html/services.html">Сервис</a>
                     </li>
                     <li class="item">
-                      <a class="link" href="./html/complex.html"
+                      <a class="link main-nav__link " href="./html/complex.html"
                         >Комплексные решения</a
                       >
                     </li>
                     <li class="item">
-                      <a class="link" href="./html/posts.html"
+                      <a class="link main-nav__link " href="./html/posts.html"
                         >Статьи и новости</a
                       >
                     </li>
                     <li class="item">
-                      <a class="link" href="./html/contacts.html">Контакты</a>
+                      <a class="link main-nav__link " href="./html/contacts.html">Контакты</a>
                     </li>
                   </ul>
                 </nav>
@@ -599,9 +599,9 @@
         <div class="low-footer">
           <p>&copy; 2011-2020 Promomix</p>
           <ul class="list social-list">
-            <li class="social-item"><a class="link" href="">Facebook</a></li>
-            <li class="social-item"><a class="link" href="">Vkontakte</a></li>
-            <li class="social-item"><a class="link" href="">Instagram</a></li>
+            <li class="social-list__item--footer"><a class="link" href="">Facebook</a></li>
+            <li class="social-list__item--footer"><a class="link" href="">Vkontakte</a></li>
+            <li class="social-list__item--footer"><a class="link" href="">Instagram</a></li>
           </ul>
         </div>
       </div>
